--- a/education.html
+++ b/education.html
@@ -62,8 +62,8 @@
     <p class="h4 text-center mt-5 bg-info text-light rounded my-5 col-md-3 mx-auto p-2">Courses: </p>
     <ul class="list-group text-center col-md-6 mx-auto mb-3">
         <li class="list-group-item">Biology 101</li>
-        <li class="list-group-item">Chemistry</li>
-        <li class="list-group-item">Web Design</li>
+        <li class="list-group-item">Chemistry 103</li>
+        <li class="list-group-item">CS-3017: Into to Web Design</li>
         <li class="list-group-item">First Year Program: Medicines and Maladies</li>
     </ul>
 
@@ -93,7 +93,7 @@
                     <li class="list-group-item"><strong>Grade Eleven:</strong> varsity football, varsity ski team
                         (captain), varsity lacrosse, Whiz Quiz (treasurer), National Honor Society (treasurer), high
                         honor roll</li>
-                    <li class="list-group-item"><strong>Grade Eleven:</strong> varsity football, varsity ski team
+                    <li class="list-group-item"><strong>Grade Twelve:</strong> varsity football, varsity ski team
                         (captain), varsity lacrosse, Whiz Quiz (treasurer), National Honor Society (treasurer), AP
                         scholar, high honor roll</li>
                 </ul>
