--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
       <div class="card-body">
         <p class="card-text fs-3"><strong>Overview:</strong></p>
         <p class="fw-normal fs-3">My name is Henry Goss and I am a student at St. Lawrence University where I am
-          hoping to prepare for a career in medicine.</p>
+          studying biochemistry preparing for a career in medicine.</p>
         <ul class="list-group fw-normal fs-4">
-          <li class="list-group-item"><strong>Education:</strong> get a background for my academic proficiencies and
+          <li class="list-group-item"><strong>Education:</strong> check out my background for my academic proficiencies
+            and
             history.</li>
-          <li class="list-group-item"><strong>Skills:</strong> learn about both my hard and soft skills. Really learn
+          <li class="list-group-item"><strong>Skills:</strong> learn about both my technical skills and soft skills. Really learn
             about me as a person.</li>
-          <li class="list-group-item"><strong>Work/Internship Experience: </strong>Learn about what initiative I have
+          <li class="list-group-item"><strong>Work/Internship Experience: </strong>discover the initiative I have
             taken to further my professional interests. </li>
         </ul>
       </div>
