--- a/projects.html
+++ b/projects.html
@@ -73,7 +73,7 @@
                 <h6 class="card-subtitle mb-2 text-muted">Spring 2025</h6>
                 <p class="card-text">
                     During this project I was taked with presenting a slideshow in Spanish. I had to present to Spanish
-                    teachers from other schools, I presented about skiing in the Spanish speaking world. Through this
+                    teachers from other schools. I presented about skiing in the Spanish speaking world. Through this
                     project, I demonstrated a high level of proficiency in English and Spanish.
             </div>
         </div>
@@ -92,7 +92,7 @@
             <div class="card-body col-md-3">
                 <h5 class="card-title">Bench and Table</h5>
                 <p class="card-text">
-                    This was one of my first projects, I built an outdoor banch and table for my family to use at our
+                    The bench and table was one of my first projects. I built an outdoor bench and table for my family to use at our
                     cabin in the woods. I built this from pressure treated wood you can buy at any hardware store.
                     Furthermore, I built this with just a drill and a circular saw.
             </div>
@@ -111,7 +111,7 @@
             <div class="card-body col-md-3">
                 <h5 class="card-title">Bird Feeder</h5>
                 <p class="card-text">
-                    I built this birtfeeder for my auunt for christmas one year. I used cedar wood to build this so it
+                    I built this bird feeder for my aunt for Christmas one year. I used cedar wood to build this so it
                     would last` outside in all weather conditions. This is built so that you can spread an icing type
                     material for the birds to eat.
             </div>
@@ -130,7 +130,7 @@
             <div class="card-body col-md-3">
                 <h5 class="card-title">Bird House</h5>
                 <p class="card-text">
-                    I built this bird house for my aunt again for Christmas. This house is made out of cedar so that it
+                    I built these bird houses for my aunt for Christmas. This house is made out of cedar so that it
                     does well in the weather. I put a copper roof on to enhance styling. Also, I made one side flip open
                     so you can easily clean the inside.
             </div>
@@ -151,7 +151,7 @@
                 <p class="card-text">
                     I built this bookshelf to store my growing collection of books. I built this shelf out of strair
                     treads because they are made out of high quality wood that has a rounded edge already. On the edges
-                    without a round edge, I used a handplane to match it. T this point in my woodworking career, I have
+                    without a round edge, I used a handplane to match it. At this point in my woodworking career, I have
                     aquired many more tools to make things much easier. The most helpful tool for this project was my
                     track saw, it made cutting the plywood back much easier! Also, excuse the paint job, this is the
                     only picture I have and it is unfortunately just primed.
@@ -171,10 +171,10 @@
             <div class="card-body col-md-3">
                 <h5 class="card-title">Charcuterie Board</h5>
                 <p class="card-text">
-                    I built thus charcuterie board for my cousin as a house warming gift. These board are made out of
+                    I built these charcuterie boards for my cousin as a house warming gift. These boards are made out of
                     mahogany to ensure they will last many generations. The one board with an edge is also a carrying
-                    tray, the edges are mmade out of curly maple. I made the handles boat cleats because my cousin oves
-                    sail boats and natical things.
+                    tray, the edges are made out of curly maple. I made the handles boat cleats because my cousin loves
+                    sailboats and nautical things.
             </div>
         </div>
     </div>
