--- a/skills.html
+++ b/skills.html
@@ -37,20 +37,22 @@
     <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto p-2">Hard Skills:</p>
     <ul class="list-group text-center col-md-6 mx-auto mb-3">
         <li class="list-group-item">HIPPA Trained</li>
-        <li class="list-group-item">Spanish</li>
+        <li class="list-group-item">Proficient in Spanish</li>
         <li class="list-group-item">Beginner in HTML and CSS Web Design</li>
         <li class="list-group-item">NYS Licensed Driver</li>
         <li class="list-group-item">NYS Licensed Hunter</li>
         <li class="list-group-item">NYS Licensed Snowmobiler</li>
-        <li class="list-group-item">Experience using carpentry tools</li>
+        <li class="list-group-item">U.S. Coast Guard Licensed Boater</li>
+        <li class="list-group-item">Experience Using Carpentry Tools</li>
     </ul>
-    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto p-2">Soft Skills:</p>
+    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto p-2">Technical Skills:</p>
     <ul class="list-group text-center col-md-6 mx-auto mb-3">
-        <li class="list-group-item">Teamwork and collaboration</li>
+        <li class="list-group-item">Teamwork and Collaboration</li>
         <li class="list-group-item">Work ethic</li>
         <li class="list-group-item">Leadership</li>
         <li class="list-group-item">Resilience</li>
         <li class="list-group-item">Compassion</li>
+        <li class="list-group-item">Communication</li>
     </ul>
     <div class="modal" id="composeModal" tabindex="-1">
         <div class="modal-dialog">
@@ -78,14 +80,13 @@
             </div>
         </div>
     </div>
-    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto p-2">What these skills mean in
-        culmination:</p>
+    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto p-2">When These Skills Come Together:</p>
     <div class="row">
         <p class="text-center col-md-6 mx-auto"> I feel that I have a strong skill base that covers a large number of
-            topics I am interested in. In the future I hope to acquire more skills to make me compatible in many
-            situations. My soft skills have allowed me to acquire a large variety of hard skills. I hope that I am able
-            to help out in an way possible. Finally, I feel that my soft skills allow me to maximize my strengths as
-            well as minimize my weaknesses in addition to working on them everyday. </p>
+            topics. In the future I will to acquire more skills to make me compatible in many
+            situations. My soft skills have allowed me to acquire a large variety of technical skills. I hope that I am able
+            to help out in an way possible when given the opportunity. Finally, I feel that my soft skills allow me to maximize my strengths as
+            well as minimize my weaknesses while working on them everyday. </p>
     </div>
 </body>
 
