--- a/work.html
+++ b/work.html
@@ -49,7 +49,7 @@
                 <h6 class="card-subtitle mb-2 text-muted">Spring 2020-Present</h6>
                 <p class="card-text">
                     I started this firewood business during COVID beause I saw a huge market for firewood in my area. I
-                    started out by splitting all the the wood by hand and now I have grown to log splitter. This has
+                    started out by splitting all the the wood by hand and now I have grown to now using a log splitter. This has
                     been my income source in the summers that allowed me to train for sports, volunteer or shadow.
             </div>
         </div>
@@ -73,7 +73,7 @@
                 <p class="card-text">
                     I began shadowing at Lewis County Health System for the summer where I observed most departments. I
                     observed in the ER, general surgery, family medicine, internal medicine and orthopedics. I was able
-                    to go to the OR and observe operations by general surgery and orthopedics. Aditionally, I was able
+                    to go to the OR and observe operations by general surgery and orthopedics. Additionally, I was able
                     to observe the CEO and CFO to strengthen my understanding of healthcare administration. Over summer
                     2025, I exclusively shadowed orthopedics in the OR but I did get some experience in the clinic.
             </div>
@@ -97,11 +97,11 @@
                 <h5 class="card-title">Oral Surgery of NNY- Dr. Attisha</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Summer 2025</h6>
                 <p class="card-text">
-                    I was able to shadow Dr. Attisha at both his office and Samaritan Mdical Center in the hospital
-                    center. In my time shadowing, I was able to observe many different oral surgeries including wisdom
-                    teeth removal, and dental implants. I was also able to observe patient consultations in the
-                    office setting. This experience was valuble because I was able to see managing a private practice as
-                    well as the opertions in a hospital setting.
+                    I was able to shadow Dr. Attisha at both his office and Samaritan Medical Center in the hospital
+                    setting. In my time shadowing, I was able to observe many different oral surgeries including wisdom
+                    teeth removal and dental implants. I was also able to observe patient consultations in the
+                    office setting. This experience was valuable because I was able to see managing a private practice as
+                    well as the surgical procedures in a hospital setting.
             </div>
         </div>
     </div>
@@ -122,8 +122,8 @@
                 <h6 class="card-subtitle mb-2 text-muted">Summer 2024, Spring 2025</h6>
                 <p class="card-text">
                     I was able to shadow Dr. Curtis in his private practice office. This was my first experience in
-                    observng procedures like wisdom tooth removal and dental implants. It was also very interesting to
-                    experience in offfice sedation. This experience was very valuable because it allowed me to also
+                    observing procedures like wisdom teeth removals and dental implants. It was also very interesting to
+                    experience in-office sedation. This experience was very valuable because it allowed me to also
                     observe Dr. Curtis expanding his practice into a new office space he was building.
             </div>
         </div>
@@ -138,10 +138,10 @@
                 <h6 class="card-subtitle mb-2 text-muted">Summer 2023, 2024</h6>
                 <p class="card-text">
                     I was able to shadow Dr. Stacy in her private practice dental office. During my time there I was
-                    able to observe many different dental procedures including fillings, and routine exams. This
+                    able to observe many different dental procedures including fillings and routine exams. This
                     experience was very valuable because it allowed me to see how a private practice
                     is run as well as observe many different patient interactions. Furthermore, this was my first
-                    experience in the dental field so i was able to get a basic understanding of how dentistry works.
+                    experience in the dental field so I was able to get a basic understanding of how dentistry works.
             </div>
         </div>
     </div>
