--- a/index.html
+++ b/index.html
@@ -47,10 +47,15 @@
           <li class="list-group-item"><strong>Education:</strong> check out my background for my academic proficiencies
             and
             history.</li>
-          <li class="list-group-item"><strong>Skills:</strong> learn about both my technical skills and soft skills. Really learn
+          <li class="list-group-item"><strong>Skills:</strong> learn about both my technical skills and soft skills.
+            Really learn
             about me as a person.</li>
           <li class="list-group-item"><strong>Work/Internship Experience: </strong>discover the initiative I have
             taken to further my professional interests. </li>
+          <li class="list-group-item"><strong>Projects: </strong>peruse some of my academic projects as well as some of
+            hobby woodworking projects!</li>
+
+          <li class="list-group-item"><strong>Contact: </strong> submit your email and we will be in touch!</li>
         </ul>
       </div>
     </div>
