--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
                 <h5 class="card-title">Seal of Biliteracy</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Spring 2025</h6>
                 <p class="card-text">
-                    During this project I was taked with presenting a slideshow in Spanish. I had to present to Spanish
+                    During this project I was tasked with presenting a slideshow in Spanish. I had to present to Spanish
                     teachers from other schools. I presented about skiing in the Spanish speaking world. Through this
                     project, I demonstrated a high level of proficiency in English and Spanish.
             </div>
