--- a/skills.html
+++ b/skills.html
@@ -34,7 +34,7 @@
     </nav>
     <p class="h1 text-center bg-primary col-md-6 mx-auto text-light rounded my-5 p-2">My Skills:</p>
 
-    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto p-2">Hard Skills:</p>
+    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto p-2">Technical Skills:</p>
     <ul class="list-group text-center col-md-6 mx-auto mb-3">
         <li class="list-group-item">HIPPA Trained</li>
         <li class="list-group-item">Proficient in Spanish</li>
@@ -45,7 +45,7 @@
         <li class="list-group-item">U.S. Coast Guard Licensed Boater</li>
         <li class="list-group-item">Experience Using Carpentry Tools</li>
     </ul>
-    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto p-2">Technical Skills:</p>
+    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto p-2">Soft Skills:</p>
     <ul class="list-group text-center col-md-6 mx-auto mb-3">
         <li class="list-group-item">Teamwork and Collaboration</li>
         <li class="list-group-item">Work ethic</li>
@@ -82,8 +82,8 @@
     </div>
     <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto p-2">When These Skills Come Together:</p>
     <div class="row">
-        <p class="text-center col-md-6 mx-auto"> I feel that I have a strong skill base that covers a large number of
-            topics. In the future I will to acquire more skills to make me compatible in many
+        <p class="text-center col-md-6 mx-auto">I have a strong skill base that covers a large number of
+            topics. In the future I will work to acquire more skills to make me compatible in many
             situations. My soft skills have allowed me to acquire a large variety of technical skills. I hope that I am able
             to help out in an way possible when given the opportunity. Finally, I feel that my soft skills allow me to maximize my strengths as
             well as minimize my weaknesses while working on them everyday. </p>
