--- a/work.html
+++ b/work.html
@@ -49,7 +49,7 @@
                 <h6 class="card-subtitle mb-2 text-muted">Spring 2020-Present</h6>
                 <p class="card-text">
                     I started this firewood business during COVID beause I saw a huge market for firewood in my area. I
-                    started out by splitting all the the wood by hand and now I have grown to now using a log splitter. This has
+                    started out by splitting all the the wood by hand and now I have grown to using a log splitter. This has
                     been my income source in the summers that allowed me to train for sports, volunteer or shadow.
             </div>
         </div>
@@ -73,7 +73,7 @@
                 <p class="card-text">
                     I began shadowing at Lewis County Health System for the summer where I observed most departments. I
                     observed in the ER, general surgery, family medicine, internal medicine and orthopedics. I was able
-                    to go to the OR and observe operations by general surgery and orthopedics. Additionally, I was able
+                    to go to the OR to observe general and orthopedic surgeons. Additionally, I was able
                     to observe the CEO and CFO to strengthen my understanding of healthcare administration. Over summer
                     2025, I exclusively shadowed orthopedics in the OR but I did get some experience in the clinic.
             </div>
@@ -100,7 +100,7 @@
                     I was able to shadow Dr. Attisha at both his office and Samaritan Medical Center in the hospital
                     setting. In my time shadowing, I was able to observe many different oral surgeries including wisdom
                     teeth removal and dental implants. I was also able to observe patient consultations in the
-                    office setting. This experience was valuable because I was able to see managing a private practice as
+                    office setting. This experience was valuable because I was able to observe the management of a private practice as
                     well as the surgical procedures in a hospital setting.
             </div>
         </div>
@@ -131,6 +131,12 @@
     <div class="card col-md-6 mx-auto my-3">
         <div class="row">
             <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/Dr. Stacy.jpg" class="img-thumbnail ms-2 mt-2" alt="Dr. Stacy">
+                    <figcaption class="figure-caption ms-2">
+                        <p><a class="link-opacity-75-hover" href="https://www.facebook.com/p/Lynn-Stacy-DDS-100054784358618/">Source</a></p>
+                    </figcaption>
+                </figure>
             </div>
 
             <div class="card-body col-md-3">
