--- a/education.html
+++ b/education.html
@@ -101,7 +101,7 @@
         </div>
     </div>
     <p class="h4 text-center mt-5 bg-info text-light rounded my-5 col-md-3 mx-auto p-2">Courses: </p>
-    <ul class="list-group text-center col-md-6 mx-auto">
+    <ul class="list-group col-md-6 mx-auto">
         <li class="list-group-item"><strong>English:</strong> English 9, English 10, Advanced English 11, Dual
             Enrollment English 101, Dual Enrollment English 102, English 12 Honors</li>
         <li class="list-group-item"><strong>Social Studies:</strong> Global Studies 9, Global Studies 10, AP United
